# SDL-tutorial

./: README.md  SDL2-2.30.5.dmg
01_hello_SDL-1/: 01_hello_SDL.cpp
01_hello_SDL-2/: 01_hello_SDL.cpp  CMakeLists.txt  readme.txt
SDL2.framework/Versions/A/: SDL2
SDL2.framework/Versions/A/Headers/: SDL_stdinc.h  SDL_version.h
SDL2.framework/Versions/A/Resources/: Info.plist
SDL2.framework/Versions/A/_CodeSignature/: CodeResources
